dev (#392)
* changed release logic on github

* updated .gitignore

* updated reusable build workflow

* fixed tnt damage on tnt sumo and fireball fight ladders

* added npc check to lobby interactions

* fixed division ranked inconsistency, updated telemetry logging

* Allow NPC interaction but block duel requests on NPC (#397)

* added title and delay settings to spleef

* changed hit delay setting to attack cooldown modifier setting

* added debug logging for telemetry

* fixed NPE

* added command for custom kit queue

* updated tntsumo logic

* added kit selector to ffa and updated /leave command to support spectators and FFA as well.

* added scale and decimal always show settings to hearth below name display

* added minimessage support for groups and nametags

* solved shield, spear problem

* added titles to duel events

* removed legacy named color for groups

* added multiple queue system

* fixed java.lang.ClassCastException

* fixed java.lang.IllegalArgumentException

* fixed sidebar name resolution

* fixed java.lang.NullPointerException

* added temp build return to tnt sumo

* added multi round match subtitle to display score

* fixed double title show glitch on round end

* added FFA arena support for previously assigned ladders

* fixed event handling priorities, hunger disable issue

* added MULTI_ROUND_START_COUNTDOWN setting to pearlfight

* applied new knockback mechanics to tnt sumo

* changed tnt earn logic to attack instead of timer

* fix: ActionBar disappearance bug and refactor runnable (#420)

* FIX STUPID HUNGER (#421)

* fix: ActionBar disappearance bug and refactor runnable

* FIX STUPID HUNGER

* fixed ladder settings handler

* small fixes

* nametag color closest to hex

* fixed concurrent modification exception

* fixed rekit to load the preconfigured layout the player choose

* added health below name to FFA settings

* added GUI click sounds

* added nick command, rewrote nametag command's logic

* added windcharge cooldown sett